--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         }
 
         h1 {
-            font-size: 20px;
+            font-size: 25px;
             font-family: Segoe UI;
             line-height: 20px;
-            color: whitesmoke;
+            color: white;
             display: table-cell;
             padding: 13px 0px 0px 20px;
         }
@@ -27,8 +27,8 @@
         }
 
         .main {
-            margin: 18px;
-            border-radius: 4px;
+            margin: 4px;
+            border-radius: 8px;
             font-size:30px;
         }
 
