--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             margin: 0;
         }
 
-        h1 {
-            font-size: 25px;
+        #headingtext {
+            font-size: 30px;
             font-family: Segoe UI;
             line-height: 20px;
             color: white;
@@ -53,7 +53,7 @@
     <div>
         <div id="heading">
             <!-- Change the h1 text to change the bot name -->    
-            <h1>safety compliance assisstance bot</h1>
+            <div id="headingtext">safety compliance assisstance bot</div>
         </div>
         <div id="webchat" role="main"></div>
     </div>    
