--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>safety compliance assisstance bot</title> 
+    <title>safety compliance assistance bot</title> 
     <!-- This styling is for the Web Chat demonstration purposes. It is recommended that style is moved to separate file for organization in larger projects -->
     <style>
         html, body {
