--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div>
         <div id="heading">
             <!-- Change the h1 text to change the bot name -->    
-            <div id="headingtext">safety compliance assisstance bot</div>
+            <div id="headingtext">safety compliance assistance bot</div>
         </div>
         <div id="webchat" role="main"></div>
     </div>    
